revised example names

--- a/svm_example.ipynb
+++ b/svm_example.ipynb
@@ -60,6 +60,7 @@
      "output_type": "stream",
      "text": [
       "Training with 5000 CRPs...\n",
+      "Initializing CryptoPUF based on tinyjambu crypto core...\n",
       "Training completed for 5000 CRPs.\n",
       "Accuracy: 0.5010\n",
       "\n",
