changed the name of the CryptoPUF class

--- a/svm_example.ipynb
+++ b/svm_example.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,12 @@
     "    challenges = np.random.randint(0, 2, size=(num_training_crps, num_bits), dtype=np.uint8) * 2 - 1  # Convert to {-1, 1}\n",
     "    test_challenges = np.random.randint(0, 2, size=(num_test_challenges, num_bits), dtype=np.uint8) * 2 - 1\n",
     "\n",
-    "    # Instantiate CryptoPUF_TinyJAMBU\n",
+    "    # Instantiate CryptoPUF\n",
     "    tinyjambu_key = np.random.bytes(16).hex()  # Randomly generated 128-bit key\n",
     "    tinyjambu_nonce = \"000000000000000000000000\"  # 12 bytes = 96 bits\n",
-    "    crypto_puf = cryptopuf.CryptoPUF_TinyJAMBU(challenge_length=num_bits, key=tinyjambu_key, nonce=tinyjambu_nonce)\n",
+    "    crypto_puf = cryptopuf.CryptoPUF(challenge_length=num_bits, key=tinyjambu_key, nonce=tinyjambu_nonce, crypto = 'tinyjambu', seed = seed)\n",
     "\n",
-    "    # Generate responses using CryptoPUF_TinyJAMBU's eval function\n",
+    "    # Generate responses using CryptoPUF's eval function\n",
     "    responses = crypto_puf.eval(challenges)\n",
     "    test_responses = crypto_puf.eval(test_challenges)\n",
     "\n",
